# C-codes

./: .VI_T.txt.swp  .gitignore  CMakeLists.txt  README.md  abc.c  abc.cpp  abc.o2  cjam_3.java  hw.c  inp-params.txt  new_test.c  prog.c  test.c  test.c~  test2.c  test3.cpp  vpn.c
a2oj/: 2.c  3.c  4.c  5.c  6.c  7.c  8.c  a.c  test.c
adv/: concat.c  file.c  struct1.c  test.c
adv/order/: order.c
alg/: bsearch.c  msort.c  q.c  qsort.c
alg/ext_sort/: README.txt  fr.c  gen.c  heapsort.c  heapsort.h
assignment/AML/: AML Assignment 1.ipynb  Supreetresult.txt  output.csv  person.csv
assignment/CS1353/: cs16btech11038_a1_1.c  cs16btech11038_a1_2.c  cs16btech11038_a2.c  qsort_l.txt  qsort_m.txt  qsort_r.txt
assignment/Comp Arch/: interpreter.c  pr_a2  supass1
assignment/Data Struct/: heap.c  linklist.h  linklist.h.gch  linklist.h~  list2.c  list2.c~
assignment/OS 2/: Average_time.txt  cs16btech11038.cpp  inp-params.txt  log.txt  readme.txt  report.odt  t.cpp
assignment/deep-l/: DeepL Assignment 1.ipynb
assignment/networks2/: client  client.c  server  server.c
assignment/pcp/: Primes-DAM.txt  Src-cs16btech11038.cpp  dam.cpp  sam1.cpp  sam2-sieve.cpp  sam2.cpp
assignment/popl2/: CS16BTECH11038.go  backup.go  hello.go  ks.cpp
assignment/quantum/: proj.ipynb
fp/: fixed_point_addition.c  fixed_point_multiply.c
hrank/: 1.c  2.c  cjam.c  cjam.cpp  cjam.java  cjam_1.java  test.cpp
other/: bezout.c  determ.c  fact.c  max.c  numrev.c
strings/: Makefile  ardel.c  arr.c  dup.c  spiral.c  strindex.c  strindex_2.c  strlen.c  strrev.c
tic-tac-toe/: tic.c
(+219 files in other folders)
